# depot

./: Cargo.toml  LICENSE  README.md
files/: default.depotconfig.toml
src/: config.rs  error.rs  main.rs  store.rs  subcommands.rs  template.rs  utils.rs
src/config/: behavior.rs  directory_condition.rs  fields_definition.rs  generator.rs  overload.rs  parse.rs  pattern.rs  resolve.rs  shell.rs
src/subcommands/: create.rs  external.rs  get.rs  get_overload.rs  list.rs  move.rs  resolve.rs  root.rs
