[package]
name = "depot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
toml =  { version = "^0.7" }
serde = { version = "1.0", features = ["derive"] }
url = { version = "2", features = ["serde"] }
globset = { version = "0.3" }
regex = { version = "1" }
